--- a/index.html
+++ b/index.html
@@ -2,23 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Planets</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        overflow: hidden;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <title>Vite + Vue</title>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
-    <script type="module" src="main.js"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
